Styling form to prevent overflow of textarea

--- a/app/assets/stylesheets/index.css.scss
+++ b/app/assets/stylesheets/index.css.scss
@@ -417,8 +417,9 @@ a.selected {
                 .zoomed
                 {
                     height:300px;
-                    width:300px;
+                    width:310px;
                     left:0;
+                    border-radius:0;
                 }
             }
         }
